--- a/group1.tex
+++ b/group1.tex
@@ -26,23 +26,28 @@
 \author{Group 1}
 \maketitle
 
-Main goal: any function computable in time $T(n)$ on a nondeterministic
+Main goal of this project is to show that any function computable in time $T(n)$ on a nondeterministic
 random-access turing machine (RTM) is computable in time $T(n)(\log T(n))^{O(1)}$
-on an $k$-tape nondeterministic non-random-access turing machine.
+on a $k$-tape nondeterministic non-random-access turing machine. 
+
+\section{Overview}
+In general the idea is to go from some machine model that allows random access to one that does not have randomness, efficiently. Here efficiently means that the overhead on the simulation s is bounded by a polynomial of the logarithm of the runtime on the machine being simulated. Although in this project we go from a specific machine - RTM - it is possible to prove that a number of variants namely RAC (Random Access Computer), Kolmogorov Machines and Schonage machines all efficiently simulate each other and therefore share the same notion of $n^k$ computability (for some $k \in \mathbb{N}$). \\
+
+We first define the notion of a non-deterministic RTM. We then define a variant of RTM called the Frugal RTM. We show that every computation running in time $T(n)$ on an RTM can be simulated in time $T(n) (log T(n))^k, k \in \mathbb{N}$. We then show how any computation in time $T(n)$ on a non-deterministic frugal RTM can be simulated on a  k-tape non-deterministic TM in time $T(n) (log T(n))^k, k \in \mathbb{N}$. We are not concerned on the specific number of tapes used as long as it greater than 1. In order to accomplish this, we make use of the fact that a non-deterministic TM can sort in time $n logn$ where $n$ is the length of the input. We provide a proof of why this is true as well.
+
+\section{Random Access Turing Machines}	
 
 \begin{defn}
-(Random-access Turing Machine, RTM.) 3 tapes - main, address and auxiliary.
-Head position of main tape is equal to the contents of the cell at
-the current position of the address tape.
+(Random-access Turing Machine, RTM.) An RTM is a turing machine with three linear tapes called the main tape, the address tape and the auxillary tape,such that the head of the main tape(the main head) is always on the cell whose number is the contents of the address tape. An instruction for an RTM has the form
+\begin{equation}
+(p,\alpha_1,\alpha_2,\alpha_3) \rightarrow (q,\beta_1,\beta_2,\beta_3,\gamma_1,\gamma_1)
+\end{equation}
+and means the following: If the control state is $p$ and the symbols in the observed cells on the three tapes are binary digits $\alpha_1,\alpha_2,\alpha_3$ respectively, then print binary digits $ \beta_1,\beta_2,\beta_3$ in the respective cells, move the address head to the left, ( resp. to the right) if $\gamma_1$ = -1 (resp. $\gamma_1$ = 1), move the auxillary-tape head with respect to $\gamma_2$ and go to control state $q$.
+
 \end{defn}
 
 \begin{defn}
-(Frugal RTM.) At time $t$, the lengths of the address and auxiliary
-tapes are $O(\log t)$.
-\end{defn}
-
-\begin{defn}
-(Efficient simulation.) ...
+(Frugal RTM.) An RTM is frugal if at any time t, the length of the address tape and the length of the auxillary tape are both $O(log t)$
 \end{defn}
 
 \begin{thm}
@@ -53,49 +58,76 @@ Frugal RTMs can efficiently simulate RTMs.
 (Not in Ravi's presentation; to be shown in future presentations.)
 \end{proof}
 
+\section{Random access TMs to Multi-tape TMs}
+
+Simulating a computation on a frugal RTM using a multi-tape TM is carried out by non-deterministically guessing the sequence of steps on the computation and then check for the correctness of the sequence. However in order to do the later, we need multi-tape TMs to be able to sort efficiently.
+
 \begin{lem}
 Let $\ell$ be a list of natural numbers, and let $C(\ell)$ be the
 binary encoding of $\ell$. Then, $\ell$ can be sorted in time $C(\ell)\log|\ell|$.
 \end{lem}
 
 \begin{proof}
-(To be shown in future presentations.)
+In the following let $[n]$ = $\{1,2,\ldots n\}$. Let $\ell$ = $(l_i \in N: i \in [m])$ be a list(sequence of natural numbers $(l_1,l_2, \ldots l_m)$. Then the binary encoding $C(\ell)$ $\in K^*$ is defined as
+\[
+C(\ell) = \overline{c(l_1)},\overline{c(l_2)}, \ldots \overline{c(l_m)}
+\]
+
+where $c(v)$ is the binary representation of $v \in \mathbb{N}$ and $\overline{x}$ is the doubled sequence which is associated with x (E.g. if x = 101 then $\overline{x}$ = 110011).This is done in order to identify where one number ends and the next begins. Let $|\ell|$ be the number of elements in the list $\ell$.\\
+
+We use a procedure similar to merge sort in a number of stage. In the first stage we sort the first and second element, the third and fourth and so on. In the second state we sort the first four elements, the next four and so on. Thus at stage $n$ we sort sequences of length $2^n$ which is made easier by the fact that the first $2^{n-1}$ and similarly the next $2^{n-1}$ elements are alread sorted. We assume the existence of four tapes which are used as follows:\\
+
+First Tape - Holds the input and the partial outputs at every stage
+
+Second Tape - Holds the first $2^{n-1}$ elements when at stage $n$
+
+Third Tape - Holds the second $2^{n-1}$ elements when at stage $n$
+
+Fourth Tape - Keeps a count of the stages so that we know the length of the elements to be copied over to the second and the third tapes.This also holds the length of each element on the list.\\
+
+Each comparison process goes as follows: Based on the count of the stages from the fourth tape we copy the first $2^{n-1}$ onto tape two and the next $2^{n-1}$ elements onto tape three. Then we compare the first two elements on the two tapes bit by bit and transfer the minimum element onto the main tape to its corresponding position. The the heands of the second tape and third tape are moved to the least elements on their lists and this process continues.\\
+
+More formally in stage $i$ we sort the segments
+
+\[
+\ell(k,i) = \{l_j: k2^i \leq j < k2^i + 2^i\} for k \leq |\ell|/2^i
+\]
+
+by merging the ordered segments $\ell(2k,i - 1),\ell(2k + 1,i - 1)$ which have been generated at stage $i - 1$. This requires $O(log |\ell|)$ stages beginning with stage 1. Since merging of to lists can be done within linear time, each stage can be done within $O(|C(\ell)|)$ steps.
 \end{proof}
 
+We first define the trace of a random access TM computation which informally is the sequence of states that the machine is in during a computation.
+
+\begin{defn}
+The trace T of a random-access TM computation is the sequence of tupes
+\[
+(t,q_t,a_t,I_t,b_t,J_t,c_t): t < T(n)
+\]
+such that at time $t$, the TM is in state $q_t$, the address tape contents is $a_t$ with the head at $I_t$, the auxillary tape contents is $b_t$ with the head at $J_t$  and the character under the head of the main tape is $c_t$.
+\end{defn}
+
 \begin{thm}
-$k$-tape nondeterministic TMs can efficiently simulate (nondet???)
-Frugal RTMs.
+$k$-tape nondeterministic TMs can efficiently simulate non-deterministic Frugal RTMs.
 \end{thm}
 
 \begin{proof}
-Let $M$ be a frugal RTM accepting some language $L$ in time $T(n)$.
-If $c$ is a computation of $M$, then $c$ is a sequence of tuples
-of the form $(t,q_{t},a_{t},I_{t},b_{t},J_{t},c_{t})$, where
+Let $M$ be a frugal RTM and$M^{'}$ be the non-deterministic mutli-tape TM on which we are going to simulate the computation on $M$. The input $x$ is on one if its tapes. $M^{'}$ guesses traces for the computation of $M$ on input $x$, guessing tuples in order from $t = 0$ to $T(n)$. Since $M$ is frugal each tuple requires guessing a $O(polylog T(n))$ amount of information. This is because 
 
 \begin{itemize}
- \item $t$ is time, $1\leq t\leq T(n)$
- \item $q_{t}$ is state at time $t$
- \item $a_{t},b_{t}$ are the \emph{entire} contents of address and auxiliary
-   tapes, respectively
- \item $I_{t},J_{t}$ are positions of heads of address and auxiliary tapes,
-   respectively
- \item $c_{t}$ is the observed symbol on the main tape at time $t$.
+  \item $t$ is a number between $0$ and $T(n)$ and requires $log T(n)$ bits
+  \item $q_t$ has constant size and only depends on $M$
+  \item $a_t$ is of size $O(log T(n)$ by definition
+  \item $b_t$ is also of size $O(log T(n)$ by definition
+  \item $I_t$ is a number representing a location on the address tape and therefore also of size $O(log T(n)$
+  \item $I_t$ is a number representing a location on the auxillary tape and therefore also of size $O(log T(n)$
+  \item $c_t$ has constant size and depends only on the size of the alphabet handled by $M$
 \end{itemize}
- 
-Note that the number of bits needed to represent a tuple in $c$ is
-bounded by $\log T(n)$ in a frugal RTM.
 
-(Define a $k$-tape N TM s.t. ... guesses the tuple sequence ... checks
-it for consistency ...?)
+$M^{'}$ giess the 6-tuples one by one and checks that the first tuple is correct, and every t+1-st tuple is consistent with the t-th one and $q_{T(n)}$ is accepting. The notion of consistency is defined as follows
 
-To check some sequence $c$ as defined above for consistency,
- 
-\begin{enumerate}
- \item Check that the first tuple is consistent with the input
- \item Check that the $t+1$st tuple is consistent with the $t$th tuple,
-   for every $t$
- \item $q_{T(n)}$ should be an accepting state.
-\end{enumerate}
+\begin{defn}
+A tuple $(t^{'}, q^{'}, a^{'}, I^{'}, b^{'}, J^{'}, c^{'})$ is consistent with the tuple $(t, q, a, I, b, J, c)$ if when in state q with address tape a with head at position I, auxillary tape B with head at position J and observing character c on the main tape, $M$ transitions to state $q^{'}$, updates the address tape to $a^{'}$ and moves its head to position $I^{'}$, updates the auxillary tape to $b^{'}$ and moves its head to position $J^{'}$.
+\end{defn}
 
 Note that we \emph{don't} check the $c_{t}$ in each tuple here, because
 of the random-access head movements on the main tape. Once the checks
@@ -103,13 +135,19 @@ here complete, however, we go back and check the $c_{t}$ for consistency.
 To do so,
 
 \begin{enumerate}
- \item Sort the sequence of tuples first by the contents of the address tape,
-   $a_{t}$, and then by time, $t$. (So groups with equal $a_{t}$ are
-   formed, and $t$ increases within each group.)
- \item check ...?
- \item check for consistency with the input ... somehow?
+  \item Sort the sequence of tuples first by the contents of the address tape,
+    $a_{t}$, and then by time, $t$. (So groups with equal $a_{t}$ are
+    formed, and $t$ increases within each group.) By lemma 4, we know that this sorting process can be carried out efficiently.
+  \item For each block (with the same value of $a_{t}$ and increasing $t$) we first check if the $c_t$ component of the first tuple is the same as the character $M^{'}$ observes under its input head. If this is not the case reject.
+  \item For two consecutive tuples within the same block, let $c$ be the $c_t$ component of the first tuple and $c^{'}$ be the corresponding component on the second tuple. Then either of the following must be true
+\begin{enumerate}
+  \item $c = c{'}$ if the computation corresponding to the first tuple did not write any characters onto the main tape
+  \item $c <> c{'}$ but the later is equal to the character written on the main tape by the computation corresponding to the first tuple
+\end{enumerate}
+  If either of them is not true, then reject.
 \end{enumerate}
 
+If each group of tuples is consistent, then the entire computation is valid and we accept. Also since this consistency check on the characters can be done in time proportional to the length of the sorted sequence of tuples, the entire process can be carried out efficiently. 
 \end{proof}
 
 %% \bibliographystyle{plainnat}
