--- a/group1.tex
+++ b/group1.tex
@@ -3,7 +3,7 @@
 \usepackage{helvet}
 \usepackage{courier}
 \usepackage[T1]{fontenc}
-\usepackage[latin9]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[letterpaper]{geometry}
 \geometry{verbose,tmargin=3cm,bmargin=4cm,lmargin=3cm,rmargin=3cm}
 \usepackage{amsthm}
@@ -27,7 +27,15 @@
 \begin{document}
 
 \title{7805 Class project, 2012: Group 1}
-\author{Group 1}
+\author{
+  Tony Garnock-Jones,
+  Zahra Jafargholi,
+  Ravishankar Rajagopal,\\
+  Bochao Shen,
+  Saber Shokat Fadaee,
+%%  Triết Võ Hữu -- I tried to get inputenc to accept this but it wouldn't
+  Triet Vo Huu
+}
 \maketitle
 
 \section{Overview}
