Start work on next section

--- a/group1.tex
+++ b/group1.tex
@@ -126,7 +126,17 @@ n$, where $n$ is the length of the input.
   ((I'll write this up ---tonyg))
 \end{proof}
 
-\section{From Frugal RTMs to Multi-tape TMs}
+\section{From Nondeterministic Frugal RTMs to Nondeterministic Multi-tape TMs}
+
+In the previous section, we had been considering deterministic Turing
+machines. We now switch to considering their non-deterministic
+counterparts.
+
+\begin{defn}
+  (Non-deterministic Turing machines.) ((Describe the nondeterministic
+  input $y$, and how the pair $(x,y)$ is checked by the machine, where
+  the deterministic machine would compute $y$ from $x$.))
+\end{defn}
 
 Simulating a computation on a frugal RTM using a multi-tape TM is
 carried out by non-deterministically guessing the sequence of steps on
