Terser bibliography style.

--- a/group1.tex
+++ b/group1.tex
@@ -8,7 +8,6 @@
 \geometry{verbose,tmargin=3cm,bmargin=4cm,lmargin=3cm,rmargin=3cm}
 \usepackage{amsthm}
 \usepackage{amsmath}
-\usepackage{natbib}
 
 \makeatletter
 \theoremstyle{plain}
@@ -298,7 +297,7 @@ computation.
   efficiently.
 \end{proof}
 
-\bibliographystyle{plainnat}
+\bibliographystyle{plain}
 \bibliography{group1}
 
 \end{document}
