--- a/group1.tex
+++ b/group1.tex
@@ -329,9 +329,9 @@ computation.
     \begin{enumerate}
     \item $c = c{'}$ if the computation corresponding to the first
       tuple did not write any characters onto the main tape
-    \item $c <> c{'}$ but the later is equal to the character
-      written on the main tape by the computation corresponding to
-      the first tuple
+    \item $c \neq c{'}$ but the latter is equal to the character
+      written on the main tape by the computation corresponding to the
+      first tuple
     \end{enumerate}
     If either of them is not true, then reject.
   \end{enumerate}
