Return to something like Ravi's original formulation.

--- a/group1.tex
+++ b/group1.tex
@@ -72,7 +72,8 @@ Although we start from a specific machine, RTM (defined formally
 below), it is shown in \cite{DBLP:conf/ershov/GurevichS89} that a
 number of variants, namely RAC (Random Access Computer), Kolmogorov
 machines and Sch\"{o}nhage machines, all efficiently simulate each
-other and therefore share the same notion of $n^{O(1)}$ computability.
+other and therefore share the same notion of $n^k$ computability,
+$k\in\mathbb{N}$.
 
 We first define the notion of a non-deterministic RTM. We then define
 a variant of RTM called a frugal RTM, and show that every specific RTM
